--- a/tm-progress-frontend/package.json
+++ b/tm-progress-frontend/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "styled-components": "^5.2.1",
+    "victory": "^35.4.9",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
