--- a/tm-progress-frontend/package.json
+++ b/tm-progress-frontend/package.json
@@ -12,6 +12,7 @@
     "mui-datatables": "^3.7.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "styled-components": "^5.2.1",
     "victory": "^35.4.9",
