--- a/tm-progress-frontend/package.json
+++ b/tm-progress-frontend/package.json
@@ -10,8 +10,10 @@
     "@testing-library/user-event": "^12.6.2",
     "date-fns": "^2.16.1",
     "mui-datatables": "^3.7.4",
+    "polished": "^4.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "styled-components": "^5.2.1",
